--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "swapp",
   "version": "0.1.0",
   "dependencies": {
+    "@apollo/client": "^3.2.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "expo": "~39.0.0",
+    "graphql": "^15.3.0",
     "react": "~16.13.0",
     "react-dom": "~16.13.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
